add title for sequence-based-compare

--- a/output/sequence-based-compare.ipynb
+++ b/output/sequence-based-compare.ipynb
@@ -5,7 +5,7 @@
    "id": "cf274817-e455-40f9-9e51-1a3fba9ad533",
    "metadata": {},
    "source": [
-    "# 1.4 comparation seq-based encode"
+    "# 1. comparation seq-based encode"
    ]
   },
   {
